kubernetes/cluster/active/apps/outline/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Team knowledge base & wiki.
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: outline.svg
    gethomepage.dev/name: outline
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=outline"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: istio-ingress
  hostnames:
    - "outline.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: outline
          namespace: outline
          port: 10196
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
